<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match_wrap"
    android:orientation="vertical" >

    <ScrollView style="@style/add_dialog_scroll_view" >

        <LinearLayout
            style="@style/match_wrap"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/add_kategoria_id"
                style="@style/listrow_id" />

            <EditText
                android:id="@+id/add_kategoria_nazov"
                style="@style/add_dialog_side_bottom_margins"
                android:hint="@string/add_kategoria_nazov_hint"
                android:inputType="text" />

            <RelativeLayout
                android:id="@+id/add_kategoria_color_bg"
                style="@style/add_dialog_kategoria_farba" >

                <TextView
                    android:id="@+id/add_kategoria_color_text"
                    style="@style/wrap_wrap_18"
                    android:layout_centerInParent="true"
                    android:text="@string/add_kategoria_farba" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout style="@style/match_wrap" >
        <Button
            android:id="@+id/dialog_naspat"
            style="@style/add_dialog_btn_weight"
            android:text="@string/naspat" />

        <Button
            android:id="@+id/dialog_add"
            style="@style/add_dialog_btn_weight"
            android:text="@string/pridat" />
    </LinearLayout>

</LinearLayout>